[package]
name = "rbtset"
version = "1.0.1"
authors = ["Martin Chaine <martin@casimir.me>"]
edition = "2018"
description = "A set based on a RB-Tree for efficient operations."
repository = "https://github.com/casimir/rbtset"
readme = "README.md"
keywords = ["data-structure", "rbtree", "tree", "set"]
categories = ["data-structures"]
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.2"
lazy_static = "1.3"
rand = "0.8"

[[bench]]
name = "sets"
harness = false
