[package]
name = "rbtset"
version = "1.0.2"
authors = ["Martin Chaine <martin@casimir.me>"]
edition = "2018"
description = "A set based on a RB-Tree for efficient operations."
repository = "https://github.com/casimir/rbtset"
readme = "README.md"
keywords = ["data-structure", "rbtree", "tree", "set"]
categories = ["data-structures"]
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "sets"
harness = false
